--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -82,26 +82,17 @@
 						</li>
 					</ol>
 				</section>
-				<section id="objectCreationPatterns" data-time="4"><h3><a title="slides" href="pages/themes/objectCreationPatterns/objectCreationPatterns.html">JavaScript objects and OOP patterns</a></h3>
+				<section id="OOPwithJS" data-time="6"><h3><a title="slides" href="pages/themes/OOPwithJS/OOPwithJS.html">OOP with JavaScript</a></h3>
 					<ol class="sub_themes">
-						<li>Object Literal Pattern</li>
-						<li>the Constructor Pattern</li>
-						<li>The Factory Pattern</li>
+						<li>Class-based vs. Prototype-based OOP paradigms</li>
+						<li>JavaScript objects in a nutshell. New ES2015 features.</li>
 						<li>Object prototype</li>
 						<li>The Object.create() method</li>
 						<li>Let's got deep - what's in a object?</li>
+						<li>Private Members?</li>
 					</ol>
 				</section>
-
-				<section id="privateMembers" data-time="2"><h3><a href="pages/themes/privateMembers/privateMembers.html">Private members?</a></h3>
-					<ol class="sub_themes">
-						<li>Public/Private/Privileged - clarify the concepts.</li>
-						<li>Private and Privileged Members - the Crockford Pattern.</li>
-						<li>Private and Privileged Members in object prototype.</li>
-					</ol>
-				</section>
-
-				<section id="inheritance" data-time="2"><h3><a href="pages/themes/inheritance/inheritance.html">Inheritance</a></h3>
+				<section id="Inheritance" data-time="2"><h3><a href="pages/themes/Inheritance/Inheritance.html">Inheritance</a></h3>
 				<ol class="sub_themes">
 					<li>Classical (class-based) Inheritance vs. Prototypal Inheritance</li>
 					<li>Classical (class-based) Inheritance in JavaScript</li>
