--- a/pages/_cliches/theme/theme.html
+++ b/pages/_cliches/theme/theme.html
@@ -97,7 +97,8 @@
     <!-- external scripts -->
     <script src="../../../lib/reveal.js/lib/js/head.min.js"></script>
     <script src="../../../lib/reveal.js/js/reveal.js"></script>
-     <!-- init reveal -->
+
+    <!-- init reveal -->
     <script>
         // Full list of configuration options available at:
         // https://github.com/hakimel/reveal.js#configuration
@@ -108,13 +109,29 @@
             slideNumber: 'c/t',
             keyboard: true,
             history: true,
-            center: true,
-            width: '100%',
-            height: '100%',
+
+            // display control
+            // center: true,
+            // width: '100%',
+            // height: '100%',
+            // // Factor of the display size that should remain empty around the content
+            // margin: 0.1,
+
+            // The "normal" size of the presentation, aspect ratio will be preserved
+			// when the presentation is scaled to fit different resolutions. Can be
+			// specified using percentage units.
+			width: 960,
+			height: 700,
+
+			// Factor of the display size that should remain empty around the content
+			margin: 0.1,
+
+			// Bounds for smallest/largest possible scale to apply to content
+			minScale: 0.2,
+			maxScale: 1.5,
+
             // slide transition
             transition: 'concave', // none/fade/slide/convex/concave/zoom
-            // Factor of the display size that should remain empty around the content
-            margin: 0.1,
             // shift+maous click to zoom in/out element
             zoomKey: 'ctrl',
             // theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
@@ -124,11 +141,13 @@
                 { src: '../../../lib/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
                 { src: '../../../lib/reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
                 { src: '../../../lib/reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-                { src: '../../../lib/reveal.js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.configure({tabReplace: highlightjsTabSize}); hljs.initHighlightingOnLoad()(); } },
+                { src: '../../../lib/reveal.js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.configure({tabReplace: highlightjsTabSize}); hljs.initHighlightingOnLoad(); } },
                 { src: '../../../lib/reveal.js/plugin/zoom-js/zoom.js', async: true },
                 { src: '../../../lib/reveal.js/plugin/notes/notes.js', async: true }
             ]
         });
   	</script>
+	<!-- linkedin badge -->
+	<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </body>
 </html>
