--- a/pages/themes/JS_Overview/JS_Overview.html
+++ b/pages/themes/JS_Overview/JS_Overview.html
@@ -423,8 +423,9 @@
 	<!-- external scripts -->
 	<script src="../../../lib/reveal.js/lib/js/head.min.js"></script>
 	<script src="../../../lib/reveal.js/js/reveal.js"></script>
+
 	 <!-- init reveal -->
-	<script>
+    <script>
         // Full list of configuration options available at:
         // https://github.com/hakimel/reveal.js#configuration
         var highlightjsTabSize = '  ';
@@ -434,13 +435,29 @@
             slideNumber: 'c/t',
             keyboard: true,
             history: true,
-            center: true,
-            width: '100%',
-            height: '100%',
+
+            // display control
+            // center: true,
+            // width: '100%',
+            // height: '100%',
+            // // Factor of the display size that should remain empty around the content
+            // margin: 0.1,
+
+            // The "normal" size of the presentation, aspect ratio will be preserved
+			// when the presentation is scaled to fit different resolutions. Can be
+			// specified using percentage units.
+			width: 960,
+			height: 700,
+
+			// Factor of the display size that should remain empty around the content
+			margin: 0.1,
+
+			// Bounds for smallest/largest possible scale to apply to content
+			minScale: 0.2,
+			maxScale: 1.5,
+
             // slide transition
             transition: 'concave', // none/fade/slide/convex/concave/zoom
-            // Factor of the display size that should remain empty around the content
-            margin: 0.1,
             // shift+maous click to zoom in/out element
             zoomKey: 'ctrl',
             // theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
@@ -455,6 +472,8 @@
                 { src: '../../../lib/reveal.js/plugin/notes/notes.js', async: true }
             ]
         });
-  </script>
+  	</script>
+	<!-- linkedin badge -->
+	<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </body>
 </html>
