--- a/pages/themes/Exceptions/Exceptions.html
+++ b/pages/themes/Exceptions/Exceptions.html
@@ -30,7 +30,7 @@
             <a class="home_link" href="/index.html#Exceptions" target="_top"><i class="fa fa-home"></i></a>
             <span class="help_link" href="#"><i class="fa fa-question"></i></span>
             <div class="help_text">
-                <div><span>N/Спейс</span><span>Next Slide</span></div>
+                <div><span>N/Space</span><span>Next Slide</span></div>
                 <div><span>P</span><span>Previous Slide</span></div>
                 <div><span>O</span><span>Slides Overview</span></div>
                 <div><span>ctrl+left click</span><span>Zoom Element</span></div>
