--- a/pages/themes/Exceptions/examples/labs/rollbar.html
+++ b/pages/themes/Exceptions/examples/labs/rollbar.html
@@ -31,7 +31,7 @@
 	function divide(x, y){
 		try{
 			if( y === 0 ){
-				throw( new DivideByZero("Critical ERROR") );
+				throw( new DivideByZero("@@@@@@@@@@@@@Critical ERROR@@@@@@@@@@@@"@) );
 			}else{
 				return x/y;
 			}
