--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -186,6 +186,8 @@
 								<li>Cache the object instance - the good and bad ways.</li>
 							</ol>
 						</li>
+						<li>Module Pattern</li>
+						<li>Revealing Module Pattern</li>
 						<li>Builder
 							<ol>
 								<li>Separating construction and representation.</li>
@@ -207,7 +209,7 @@
 								<li>Example: Implementing decorators with jQuery.</li>
 							</ol>
 						</li>
-						<li>Facade
+						<li>Façade
 							<ol>
 								<li>A simplified interface.</li>
 							</ol>
@@ -226,8 +228,7 @@
 						</li>
 					</ol>
 				</section>
-
-				<section id="Iterator" data-time="2"><h3>Iterator</h3>
+				<section id="Iterator" data-time="4"><h3><a title="slides" href="pages/themes/Iterator/Iterator.html">Iterator</a></h3>
 					<ol class="sub_themes">
 
 					</ol>
@@ -249,7 +250,7 @@
 
 					</ol>
 				</section>
-				<section id="testDesignPatterns" data-time="2"><h3>Test</h3></section>
+				<section id="testDesignPatterns" data-time="4"><h3>Exercises and Test</h3></section>
 				<!-- <section id="BehavioralPatternsSummary" data-time="4"><h3>Summary - the Behavioural Patterns</h3>
 					<ol class="sub_themes">
 						<li>A real world usage of the Behavioural Patterns.</li>
@@ -286,21 +287,21 @@
 						<li>Live example.</li>
 					</ol>
 				</section>
-				<section data-time="4"><h3>JSON for Web Services</h3>
+				<section data-time="6"><h3>JSON for Web Services</h3>
 					<ol class="sub_themes">
 						<li>Consume JSON data JavaScript.</li>
 						<li>A JQuery approach.</li>
 						<li>Google maps API – live example.</li>
 					</ol>
 				</section>
-				<section data-time="4"><h3>Web Services using XMLHttpRequest (Ajax)</h3>
+				<section data-time="6"><h3>Web Services using XMLHttpRequest (Ajax)</h3>
 					<ol class="sub_themes">
 						<li>Sending HTTP Request.</li>
 						<li>Process the Response.</li>
 						<li>User Registration – live example.</li>
 					</ol>
 				</section>
-				<section data-time="2"><h3>RESTful Web Services</h3>
+				<section data-time="6"><h3>RESTful Web Services</h3>
 					<ol class="sub_themes">
 						<li>The basics.</li>
 						<li>Let’s code: Consuming a RESTful Web Service with jQuery.</li>
