--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -233,7 +233,7 @@
 
 					</ol>
 				</section>
-				<section id="Observer" data-time="4"><h3>Observer</h3>
+				<section id="Observer" data-time="4"><h3><a title="slides" href="pages/themes/ObserverPattern/ObserverPattern.html">Observer</a></h3>
 					<ol class="sub_themes">
 
 					</ol>
