--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -233,16 +233,15 @@
 
 					</ol>
 				</section>
-				<section id="Observer" data-time="4"><h3><a title="slides" href="pages/themes/ObserverPattern/ObserverPattern.html">Observer</a></h3>
+				<section id="Observer" data-time="4"><h3><a title="slides" href="pages/themes/Observer/Observer.html">Observer</a></h3>
 					<ol class="sub_themes">
 
 					</ol>
 				</section>
-				<section id="Mediator" data-time="4"><h3>Mediator</h3>
+				<section id="Mediator" data-time="4"><h3><a title="slides" href="pages/themes/Mediator/Mediator.html">Mediator</a></h3>
 					<ol class="sub_themes">
 						<li>Pros and Cons.</li>
 						<li>Mediator Vs. Observer.</li>
-
 					</ol>
 				</section>
 				<section id="Strategy" data-time="4"><h3>Strategy</h3>
