day9+50min: DONE: Mediator NEXT: Strategy&Exercises&&Test; MVC

--- a/pages/themes/Observer/examples/slides/paintOnStartingLetter/iepPaintOnStartingLetter/paintOnStartingLetter.html
+++ b/pages/themes/Observer/examples/slides/paintOnStartingLetter/iepPaintOnStartingLetter/paintOnStartingLetter.html
@@ -25,7 +25,19 @@
 			<li>ontology</li>
 			<li>Einstein</li>
 		</ul>
+		<button id="unsubBtn">Unsubscribe Second List</button>
+		<ul class="observers">
+			<li>ORCHIDEA</li>
+			<li>ASTRONAUT</li>
+			<li>ORIGAMI</li>
+			<li>ARGENTINA</li>
+			<li>ROCKET</li>
+			<li>ONTOLOGY</li>
+			<li>EINSTEIN</li>
+		</ul>
+
 	</div>
+
 </body>
 <script type="text/javascript" src="paintOnStartingLetter.js"></script>
 </html>
