TODO list examples

--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -257,27 +257,30 @@
 					</ol>
 				</section> -->
 			</article>
-			<article><h2><span>MV* Patterns</span></h2>
-				<section data-time="3"><h3>MVC</h3>
+			<article><h2><span>Architectural Patterns</span></h2>
+				<section id="MVCPatterns" data-time="8"><h3><a title="slides" href="pages/themes/MVCPatterns/MVCPatterns.html">MV* Patterns</a></h3>
 					<ol class="sub_themes">
-						<li>The Model-View-Controller paradigm.</li>
-						<li>An example with simple view templating.</li>
+						<li>MVC
+							<ol>
+								<li>The Model-View-Controller paradigm.</li>
+								<li>An example with simple view templating.</li>
+							</ol>
+						</li>
+						<li>MVP
+							<ol>
+								<li>The Model-View-Presenter paradigm.</li>
+								<li>MVC or MVP?</li>
+							</ol>
+						</li>
+						<li>MVVP
+							<ol>
+								<li>The Model-View-ViewModel paradigm.</li>
+								<li>Pros and Cons.</li>
+							</ol>
+						</li>
+						<li>Test</li>
 					</ol>
 				</section>
-				<section data-time="2"><h3>MVP</h3>
-					<ol class="sub_themes">
-						<li>The Model-View-Presenter paradigm.</li>
-						<li>MVC or MVP?</li>
-					</ol>
-				</section>
-				<section data-time="2"><h3>MVVP</h3>
-					<ol class="sub_themes">
-						<li>The Model-View-ViewModel paradigm.</li>
-						<li>Pros and Cons.</li>
-					</ol>
-				</section>
-				<section id="testMVPatterns" data-time="1"><h3>Test</h3></section>
-				<!-- <section data-time="4"><h3>MV* Patterns  - real case scenarios</h3></section> -->
 			</article>
 			<article><h2><span>Web Services</span></h2>
 				<section data-time="4"><h3>XML Web Services</h3>
