--- a/pages/themes/MVCPatterns/MVCPatterns.html
+++ b/pages/themes/MVCPatterns/MVCPatterns.html
@@ -86,7 +86,7 @@
 	<section><h3>why && when to use?</h3>
 		<dl class="fa">
 			<dt>when you have to create rich, interactive user interfaces</dt>
-			<dt>encourages improved application architecture through a separation of concerns.</dt>
+			<dt>encourages improved application architecture through a <a href="https://en.wikipedia.org/wiki/Separation_of_concerns">separation of concerns</a>.</dt>
 			<dt>separating out the application logic from the user interface allows the reuse of models for other interfaces in the application</dt>
 		</dl>
 	</section>
