--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -283,7 +283,7 @@
 				</section>
 			</article>
 			<article><h2><span>Web Services</span></h2>
-				<section data-time="4"><h3>XML Web Services</h3>
+				<section id="XMLWebServices" data-time="4"><h3><a title="slides" href="pages/themes/XMLWebServices/XMLWebServices.html">XML Web Services</a></h3>
 					<ol class="sub_themes">
 						<li>Parse XML using JavaScript.</li>
 						<li>Live example.</li>
