--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -289,7 +289,7 @@
 						<li>Live example.</li>
 					</ol>
 				</section>
-				<section data-time="6"><h3>JSON for Web Services</h3>
+				<section data-time="6"><h3><a title="slides" href="pages/themes/JSONForWebServices/JSONForWebServices.html">JSON for Web Services</a></h3>
 					<ol class="sub_themes">
 						<li>Consume JSON data JavaScript.</li>
 						<li>A JQuery approach.</li>
@@ -327,7 +327,7 @@
 		<p><span>Iva E. Popova.</span>, 2017.
 		<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a></p>
 		</div>
-		<div class="right">Created for <a href="http://progressbg.net/kurs-po-web-design/">ProgressBG WebDesign Course</a></div>
+		<div class="right">Created for <a href="http://www.javelingroup.com/">ProgressBG: JavelinGroup COurse</a></div>
 </footer>
 <script type="text/javascript" src="outfit/js/CustomDOM.js"></script>
 <script type="text/javascript" src="outfit/js/agenda.js"></script>
