--- a/pages/themes/JSONForWebServices/examples/GitHubAPI/test.html
+++ b/pages/themes/JSONForWebServices/examples/GitHubAPI/test.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>test</title>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"
 		integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-	  	crossorigin="anonymous"></script>
+	  	crossorigin="anonymous"></script> -->
 	  <style type="text/css">
 	  	li{
 	  		list-style-type: none;
